index.html 파일 내용 추가
Grid(Table) 정보 추가함.

--- a/index.html
+++ b/index.html
@@ -3,5 +3,15 @@
 <body>
 
     <h1>여기는 테스트 입니다.111</h1>
+    <table>
+    	<tr>
+    		<td>1</td>
+    		<td>2</td>
+    	</tr>
+    	<tr>
+    		<td>첫번째 내용</td>
+    		<td>두번째 내용</td>
+    	</tr>
+    </table>
 </body>
 </html>
